# traffix-linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean-build.sh
src/: flarm.c  flarm.h  gdl90.c  gdl90.h  gdltask.c  gdltask.h  main.c  main.h  ownship.c  ownship.h  riemann.c  riemann.h  traffic.c  traffic.h  udp.c  udp.h
